--- a/k8s/helm/templates/details-service.yaml
+++ b/k8s/helm/templates/details-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookinfo-dev-details
-  namespace: student23-bookinfo-dev
+  name: {{ .Release.Name }}
+  namespace: {{ .Values.details.namespace }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.ingress.serviceType }}
   ports:
   - port: 8081
   selector:
-    app: bookinfo-dev-details
+    app: {{ .Release.Name }}
